Version 1.3.9+svn:
 * campaigns:
   * Eastern Invasion
     * Fixed bug #10195, related to Holy Amulet's description
   * Northern Rebirth
     * Balancing polishing and bug fixing.
     * Disabled undead branch for the upcoming 1.4 string freeze, as it is far
       from finished right now, and will not change before the string freeze.
     * Made auto recalled units loyal.
   * Under the Burning Suns
     * renamed the files to reflect scenario titles
     * new title image and some initial story images
     * redesigned the Dust Devil unit to make it less overpowering
     * gave Elyssa 1 move across sand
     * fixed AI recruitment in 'Across the Harsh Sands' and made
       lost souls easier to beat back
     * bugfix for blocker in 'In the Tunnels of the Trolls'
 * graphics:
   * polished ankh prop picture from Liberty, and moved to core replacing
     old ankh-necklace.png used by Eastern Invasion
   * various shadow under units updates for consistency
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Finnish, French, Galician,
     Greek, Hungarian, Italian, Polish, Portuguese (Brazil), Russian, Spanish,
     Swedish, Valencian
   * updates fonts: DejaVuSans (2.21)
 * map editor:
   * fixed a bug when two dimensions of a map were modified, the editor 
     could crash (bug #10216)
 * multiplayer:
   * revised maps: Den of Onis, Silverhead Crossing, Sulla's Ruins,
     Weldyn Channel, Blue Water Province
   * removed option to enforce female gender on side leaders, replaced with a gender
     choice combo-box in the MP side setup UI (client and host), which can choose between
     random, male, and female, when available.
   * the server sends a periodical 'ping' to all players to detect ghosts
   * implemented reloading of the server config on SIGHUP
 * sound
   * "Legends of the North" (legends_of_the_north.ogg) moved from NR to mainline
 * units:
   * created female variation for L3 Necromancer (needs graphics)